aws-terraform/base-code/eks-mix/0001-k8s-examples/LoadBalancer/ingress-with-alb/0012-ingress-with-ingress-group-and-host-routing/static/static-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress-external-dns
  labels:
    app: static
  annotations:
    kubernetes.io/ingress.class: "alb" 
    alb.ingress.kubernetes.io/load-balancer-name: alb-ingress-group
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port  
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:788210522308:certificate/c3eebb6d-52d1-47d2-88f9-032c8fa3652a
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: static.devopseasylearning.net
    # Ingress Groups
    alb.ingress.kubernetes.io/group.name: apps-ingress-group
    alb.ingress.kubernetes.io/group.order: '60'
spec:
  rules: 
    - host: static.devopseasylearning.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-nodeport-service
                port: 
                  number: 80
